--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,28 @@ body {
   color: red;
 }
 
+#tasks {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 15px;
+}
+
+#tasks div {
+  border-radius: 5px;
+  background-color: #E8E5DA;
+  display: grid;
+  gap: 5px;
+  padding: 5px;
+}
+
+#tasks div .btnOptions {
+  display: flex;
+  justify-self: center;
+  gap: 15px;
+
+}
+
+#tasks div .btnOptions i {
+  cursor: pointer;
+}
+
