--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,16 @@ body {
   padding: 5px;
 }
 
+#tasks div p {
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
 #tasks div .btnOptions {
   display: flex;
   justify-self: center;
   gap: 15px;
+  font-size: 16px;
 
 }
 
