--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   font-size: 10px;
   height: 600px;
   width: 300px;
+  border-radius: 5px;
   background-color: #9EB7E5;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
@@ -28,7 +29,12 @@ body {
   padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
+  transition: all .2s ease-in-out;
 
+}
+
+#addNewTask:hover {
+  transform: scale(0.95);
 }
 
 .fa-plus {
@@ -70,5 +76,11 @@ body {
 
 #tasks div .btnOptions i {
   cursor: pointer;
+  transition: all .2s ease-in-out;
 }
+
+#tasks div .btnOptions i:hover {
+  transform: scale(1.5);
+}
+
 
