--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #E8E5DA;
+  background-color: #9EB7E5;
 }
 
 ::-webkit-scrollbar-thumb {
